--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -5,6 +5,11 @@ on: [push]
 jobs:
   action:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v1
+      
+      - name: "hello-action"
+        uses: ./ .github/actions/hello-world
+        with:
+          firstGreeting: "Learning Lab User"
+
