--- a/.github/actions/hello-world/action.yml
+++ b/.github/actions/hello-world/action.yml
@@ -1,7 +1,7 @@
 name: "my hello action"
 
 
-description: "say hello with GitHub Actions"
+description: "say hello with actions"
 
 inputs:
   firstGreeting:
@@ -17,6 +17,4 @@ inputs:
   thirdGreeting:
     description: "a third greeting"
     required: false
-runs:
-   using: "docker"
-   image: "Dockerfile"
+
