--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -1,7 +1,22 @@
-#name: Docker Actions
+name: Docker Actions
 
 #on: [push]
+on: 
+  pull_request:
+    types: [labeled]
 
+jobs:
+  action:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v1
+
+       - name: hello-action
+         uses: ./.github/actions/hello-world
+
+       - name: meow
+         uses: ./.github/actions/cat-facts
 #jobs:
 #  action:
 #    runs-on: "ubuntu-latest"
