Update workflow add meow

--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -12,10 +12,10 @@ jobs:
     steps:
       - uses: actions/checkout@v1
 
-       - name: hello-action
+       - name: "hello-action"
          uses: ./.github/actions/hello-world
 
-       - name: meow
+       - name: "meow"
          uses: ./.github/actions/cat-facts
 #jobs:
 #  action:
